crates/uitest/fixtures/parser/index.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/index.fe
---
error[1-0001]: unexpected syntax
  ┌─ index.fe:2:5
  │
2 │ x[1 a]
  │     ^ unexpected syntax

error[1-0001]: expected `]`
  ┌─ index.fe:3:8
  │
3 │ x[2 + 3
  │        ^ expected `]`


